--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Lora" rel="stylesheet">
+    <link
+  rel="stylesheet"
+  href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+    />
     <title>React App</title>
   </head>
   <body>
